--- a/rigor/BibitWorksheet/RWorksheet_BIBIT#1.Rmd
+++ b/rigor/BibitWorksheet/RWorksheet_BIBIT#1.Rmd
@@ -288,8 +288,8 @@ print(a, na.print="-999")
     operator as in > class(x) <- "foo".   
     
 ```{r}
-  name = readline(prompt="John Benedict Bibit")
-age = readline(prompt="19")
+  name = readline(prompt="Input your name: ")
+age = readline(prompt="Input your age: ")
 print(paste("My name is",name, "and I am",age ,"years old."))
 print(R.version.string)
 ```
