--- a/rigor/worksheet4/RWorksheet_BIBIT#4b.Rmd
+++ b/rigor/worksheet4/RWorksheet_BIBIT#4b.Rmd
@@ -9,152 +9,262 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+
 1. Using the for loop, create an R script that will display a 5x5 matrix as shown in
 Figure 1. It must contain vectorA = [1,2,3,4,5] and a 5 x 5 zero matrix.
-
-```{r}
-
-vectorA <- c(1, 2, 3, 4, 5)
-
-
-matrix_result <- matrix(0, nrow = 5, ncol = 5)
-
-
-for (i in 1:length(vectorA)) {
-  matrix_result[1, i] <- vectorA[i]
-}
-
-
-print(matrix_result)
-```
-
-
+Hint Use abs() function to get the absolute value
 
 2. Print the string "*" using for() function. The output should be the same as shown
 in Figure
 ```{r}
+# Create the vectorA
+vectorA <- c(1, 2, 3, 4, 5)
 
-n <- 5
+# Create the 5x5 zero matrix
+matrix <- matrix(0, nrow = 5, ncol = 5)
 
-
-for (i in 1:n) {
-
-  cat(rep("*", i), "\n")
+# Display the matrix
+for (i in 1:5) {
+  for (j in 1:5) {
+    matrix[i, j] <- abs(i - j)
+    cat(matrix[i, j], " ")
+  }
+  cat("\n")
 }
+
+# Print the "*" string using for() function
+for (i in 1:5) {
+  for (j in 1:i) {
+    cat("*")
+  }
+  cat("\n")
+}
+
 ```
 
-\pagebreak 
-3.Get an input from the user to print the Fibonacci sequence starting from the 1st input
-up to 500. Use repeat and break statements. Write the R Scripts and its output.
-
+3. Get an input from the user to print the Fibonacci sequence starting from the 1st input up to 500. Use repeat and break statements. Write the R Scripts and its output.
 ```{r}
-start_num <- 5  # Assigned starting number for the Fibonacci sequence
-a <- 0
-b <- 1
+# Get the starting number from the user
+start_number <- readline(prompt = "Enter the starting number: ")
 
-cat("Fibonacci sequence starting from", start_num, "up to 500:\n")
+# Convert the input to a number
+start_number <- as.numeric(start_number)
 
+# Initialize variables for the Fibonacci sequence
+fib_1 <- 0
+fib_2 <- 1
+
+# Print the first number in the sequence
+print(fib_1)
+
+# Loop to generate and print the Fibonacci sequence
 repeat {
-  fib <- a + b
-  a <- b
-  b <- fib
+  # Calculate the next Fibonacci number
+  fib_next <- fib_1 + fib_2
   
-  if (fib >= start_num) {
-    cat(fib, "\n")
-  }
-  
-  if (fib > 500) {
+  # Print the next Fibonacci number
+  print(fib_next)
+
+  # Update the values for the next iteration
+  fib_1 <- fib_2
+  fib_2 <- fib_next
+
+  # Break out of the loop if the next Fibonacci number exceeds 500
+  if (fib_next > 500) {
     break
   }
 }
-  
 ```
-
-
-
+\pagebreak
 4. Import the dataset as shown in Figure 1 you have created previously.
 
-a. What is the R script for importing an excel or a csv file? Display the first 6 rows of
-the dataset? Show your codes and its result
 
+a. What is the R script for importing an excel or a csv file? Display the first 6 rows of the dataset? Show your codes and its result
 ```{r}
 
-shoes_data_csv <- read.csv("/cloud/project/rigor/worksheet4/shoes_data.csv")
+# Import the Excel file (replace 'your_file.xlsx' with your actual file path)
+shoes <- read.csv("shoes_data.csv")
+shoes
 
-
-head(shoes_data_csv)
 ```
-
-
 
 b. Create a subset for gender(female and male). How many observations are there in
 Male? How about in Female? Write the R scripts and its output.
-
 ```{r}
-
-
-shoes_data_csv
-
-male_data <- subset(shoes_data_csv, Gender == "M")
-female_data <- subset(shoes_data_csv, Gender == "F")
-
-num_male <- nrow(male_data)
-num_female <- nrow(female_data)
-
-cat("Number of observations in Male:", num_male, "\n")
-cat("Number of observations in Female:", num_female, "\n")
-```
-
-
-c. Create a graph for the number of males and females for Household Data. Use plot(),
-chart type = barplot. Make sure to place title, legends, and colors. Write the R scripts and
-its result.
-
-```{r}
-library(readr)
-
-household_data <- read.csv("/cloud/project/rigor/worksheet4/CopyOfHouseholdData.csv")
-
-gender_count <- table((household_data$Sex))
-
-if (length(gender_count) > 0) {
-    bar_colors <- c("blue", "pink")
-    
-    barplot(gender_count,
-            main = "Number of Males and Females in Household Data",
-            xlab = "Gender",
-            ylab = "Number of Observations",
-            col = bar_colors,
-            beside = TRUE,
-            names.arg = names(gender_count))
-    
-    legend("topright", legend = names(gender_count), fill = bar_colors)
-} else {
-    print("No valid gender data to plot.")
-}
+femalesubset <- subset(shoes, Gender == "F")
+malesubset <- subset(shoes, Gender == "M")
+femalecount <- nrow(femalesubset)
+malecount <- nrow(malesubset)
+cat("Female:", femalecount, "\n")
+cat("Male:", malecount, "\n")
 ```
 
 
 \pagebreak
+c. Create a graph for the number of males and females for Household Data. Use plot(),
+chart type = barplot. Make sure to place title, legends, and colors. Write the R scripts and
+its result.
+```{r}
+gendercounts <- table(shoes$Gender)
+barplot(gendercounts, 
+        main = "Number of Males and Females in Household Data",
+        xlab = "Gender",
+        ylab = "Count",
+        col = c("pink", "blue"),
+        legend = c("Female", "Male"),
+        names.arg = c("Female", "Male"))
+```
 
+\pagebreak
 5. The monthly income of Dela Cruz family was spent on the following:
-Food Electricity Savings Miscellaneous
-60 10 5 25
-
-
 a. Create a piechart that will include labels in percentage.Add some colors and title of
 the chart. Write the R scripts and show its output.
 ```{r}
-categories <- c("Food", "Electricity", "Savings", "Miscellaneous")
-values <- c(60, 10, 5, 25)
+expenses <- c(Food = 60, Electricity = 10, Savings = 5, Miscellaneous = 25)
+percent_labels <- paste0(names(expenses), " - ", round(expenses / sum(expenses) * 100), "%")
+pie(expenses, 
+    labels = percent_labels, 
+    col = c("purple", "cyan", "orange", "maroon"), 
+    main = "Dela Cruz Family Monthly Expenses")
 
-percentages <- values / sum(values) * 100
-
-pie(percentages, 
-    labels = paste(categories, round(percentages, 1), "%"), 
-    col = c("lightblue", "lightgreen", "lightpink", "lightyellow"),
-    main = "Dela Cruz Family Monthly Income Distribution")
-
-legend("topright", legend = categories, fill = c("lightblue", "lightgreen", "lightpink", "lightyellow"))
 ```
+
+6. Use the iris dataset.
+a. Check for the structure of the dataset using the str() function. Describe what you
+have seen in the output.
+```{r}
+data(iris)
+str(iris)
+```
+
+b. Create an R object that will contain the mean of the sepal.length, sepal.width,petal.length,and petal.width. What is the R script and its result?
+```{r}
+colMeans(iris[, 1:4])
+```
+
+\pagebreak
+c. Create a pie chart for the Species distribution. Add title, legends, and colors. Writethe R script and its result.
+```{r}
+species_counts <- table(iris$Species)
+pie(species_counts, 
+    main = "Species Distribution in Iris Dataset", 
+    col = c("blue", "green", "red"),
+    labels = paste(names(species_counts), "\n", species_counts))
+legend("topright", 
+       legend = names(species_counts), 
+       fill = c("blue", "green", "red"))
+
+```
+
+d. Subset the species into setosa, versicolor, and virginica. Write the R scripts and show the last six (6) rows of each species.
+```{r}
+setosa <- subset(iris, Species == "setosa")
+versicolor <- subset(iris, Species == "versicolor")
+virginica <- subset(iris, Species == "virginica")
+tail(setosa)
+tail(versicolor)
+tail(virginica)
+```
+
+e. Create a scatterplot of the sepal.length and sepal.width using the different   species(setosa,versicolor,virginica). Add a title = “Iris Dataset”, subtitle = “Sepal
+width and length, labels for the x and y axis, the pch symbol and colors should be based on
+the species.
+```{r}
+colors <- c("setosa" = "red", "versicolor" = "blue", "virginica" = "green")
+symbols <- c("setosa" = 16, "versicolor" = 17, "virginica" = 18)
+plot(iris$Sepal.Length, iris$Sepal.Width, 
+     col = colors[iris$Species], 
+     pch = symbols[iris$Species],
+     main = "Iris Dataset", 
+     sub = "Sepal Width and Length",
+     xlab = "Sepal Length", 
+     ylab = "Sepal Width")
+legend("topright", legend = c("Setosa", "Versicolor", "Virginica"), 
+       col = c("red", "blue", "green"), 
+       pch = c(16, 17, 18))
+
+```
+
+\pagebreak
+f. Interpret the result.
+The data structure supported both basic analysis and detailed modeling, with mean values offering a quick look at iris flower traits. Visualizations like the pie chart and scatterplot illustrated species distribution and trait correlations, enabling focused, species-specific analysis.
+
+
+7. Import the alexa-file.xlsx. Check on the variations. Notice that there are extra whitespaces among black variants (Black Dot, Black Plus, Black Show, Black Spot). Also on the white variants (White Dot, White Plus, White Show, White Spot).
+a. Rename the white and black variants by using gsub() function.
+```{r}
+library(readxl)
+alexa_data <- read_excel("alexa_file.xlsx")
+unique(alexa_data$variation)
+alexa_data$variation <- gsub("Black Dot", "BlackDot", alexa_data$variation)
+alexa_data$variation <- gsub("Black Plus", "BlackPlus", alexa_data$variation)
+alexa_data$variation <- gsub("Black Show", "BlackShow", alexa_data$variation)
+alexa_data$variation <- gsub("Black Spot", "BlackSpot", alexa_data$variation)
+alexa_data$variation <- gsub("White Dot", "WhiteDot", alexa_data$variation)
+alexa_data$variation <- gsub("White Plus", "WhitePlus", alexa_data$variation)
+alexa_data$variation <- gsub("White Show", "WhiteShow", alexa_data$variation)
+alexa_data$variation <- gsub("White Spot", "WhiteSpot", alexa_data$variation)
+unique(alexa_data$variation)
+```
+
+\pagebreak
+b. Get the total number of each variations and save it into another object. Save the object as variations.RData. Write the R scripts. What is its result?
+```{r}
+library(dplyr)
+variation_counts <- alexa_data %>%
+  count(variation)
+print(variation_counts)
+save(variation_counts, file = "variations.RData")
+```
+
+c. From the variations.RData, create a barplot(). Complete the details of the chart which include the title, color, labels of each bar.
+```{r}
+library(dplyr)
+load("variations.RData")
+variation_counts$variation <- gsub(" +", " ", variation_counts$variation)
+variation_counts$variation <- trimws(variation_counts$variation)
+bar_data <- variation_counts$n
+bar_names <- variation_counts$variation
+barplot(
+  bar_data,
+  main = "Counts of Variations",               
+  col = rainbow(length(bar_data)),              
+  names.arg = bar_names,                        
+  xlab = "Variations",                          
+  ylab = "Counts",                            
+  las = 2,                                      
+  border = "black"                               
+)
+text(x = seq_along(bar_data), y = bar_data, labels = bar_data, pos = 3, cex = 0.8, col = "black")
+
+```
+
+\pagebreak
+d. Create a barplot() for the black and white variations. Plot it in 1 frame, side by side. Complete the details of the chart.
+```{r}
+library(ggplot2)
+library(dplyr)
+load("variations.RData")
+variation_counts$variation <- gsub(" +", " ", variation_counts$variation)
+variation_counts$variation <- trimws(variation_counts$variation)
+bw_variations <- variation_counts %>%
+  filter(grepl("Black|White", variation))
+bar_data <- as.matrix(bw_variations$n)
+bar_names <- bw_variations$variation
+barplot(
+  bar_data,
+  beside = TRUE,                           
+  main = "Counts of Black and White Variations", 
+  col = c("black", "gray", "lightgray", "white"),  
+  names.arg = bar_names,                   
+  xlab = "Variations",                      
+  ylab = "Counts",                          
+  las = 2,                                
+  border = "black"                          
+)
+text(x = seq_along(bar_data), y = bar_data, labels = bar_data, pos = 3, cex = 0.8, col = "black")
+
+```
+
+
 
